# OmniVLA

./: pyproject.toml
prismatic/: __init__.py
prismatic/models/: __init__.py
prismatic/models/backbones/llm/: base_llm.py
prismatic/models/backbones/vision/: base_vision.py  dinoclip_vit.py  dinosiglip_vit.py
prismatic/models/vlms/: prismatic.py
prismatic/training/: __init__.py
prismatic/vla/: __init__.py
rena/: README.md  __init__.py  config.yaml  handler.py  messages.py  model.py  node.py  server.py  transport.py
