[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "OmniVLA"
authors = [
    {name = "Noriaki Hirose"},
    {name = "Catherine Glossop"},
    {name = "Dhruv Shah"},
    {name = "Sergey Levine"},    
]
description = "OmniVLA: An Omni-Modal Vision-Language-Action Model for Robot Navigation"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["vision-language-action model", "vision-based navigation", "robot learning"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "accelerate>=0.25.0",
    "draccus==0.8.0",
    "einops",
    # "flash_attn==2.5.5",      # Here for documentation -- install *AFTER* editable install (follow README)
    "huggingface_hub==0.29.1",
    "json-numpy",
    "jsonlines",
    "matplotlib",
    "peft==0.11.1",
    "protobuf",
    "rich",
    "sentencepiece==0.1.99",
    "timm==0.9.10",
    "tokenizers==0.19.1",
    # torch / torchvision / torchaudio installed manually on Jetson (see rena/README.md).
    # "torch==2.2.0",
    # "torchvision==0.17.0",
    # "torchaudio==2.2.0",
    "transformers @ git+https://github.com/moojink/transformers-openvla-oft.git",  # IMPORTANT: Use this fork for bidirectional attn (for parallel decoding)
    # Training-only deps — skipped on Jetson edge install:
    # "wandb",
    # "tensorflow==2.15.0",
    # "tensorflow_datasets==4.9.3",
    # "tensorflow_graphics==2021.12.3",   # pulls tensorflow-addons (no aarch64/py310 wheel).
    # "dlimp @ git+https://github.com/moojink/dlimp_openvla",
    # "diffusers==0.11.1",
    # "lmdb",
    # "zarr",
    # "datasets",
    # "av",
    "imageio",
    "uvicorn",
    "fastapi",
    "utm",
    "efficientnet_pytorch",
    "openai-clip"
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "gpustat",
    "ipython",
    "pre-commit",
    "ruff>=0.2.2",
]
sagemaker = [
    "boto3",
    "sagemaker"
]

[project.urls]
homepage = "https://omnivla-nav.github.io"
repository = "https://github.com/NHirose/OmniVLA"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["cache"]

[tool.setuptools.package-data]
"prismatic" = ["py.typed"]

[tool.black]
line-length = 121
target-version = ["py38", "py39", "py310"]
preview = true

[tool.ruff]
line-length = 121
target-version = "py38"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "RUF", "W"]
ignore = ["F722"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
